# Mnsx-KrakenPool

./: .gitignore  CMakeLists.txt  README.md
examples/: BasicUsage.cpp
include/: KrakenPool.h  SafeQueue.h
src/: KrakenPool.cpp
